bin/tests/errors/parser/parser_err_global_skipfmt_legacy.swg
#global skipfmt                     // swc-expected-error {{parser_err_unexpected_token}}
